# pyscript_dot_com

./: NOTES.md  README.md  TODO  pyproject.toml
.github/workflows/: publish.yaml
pyscript_dot_com/: __init__.py  account.py  base.py  const.py  local.py  project.py  proxies.py  requests.py  storage.py  utils.py
tests/: conftest.py  pyscript.py  simple_server.py  test_local_datastorage.py  test_project_datastorage.py  test_proxies.py  test_requests.py  test_storage.py  test_utils.py
