[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm"]

[project]
authors = [
  {name = "Fabio Rosado", email = "frosado@anaconda.com"},
]
description = "Package to use PyScript.com features in a simple and easy way"
license = {text = "Apache-2.0"}
name = "pyscript_dot_com"
readme = "README.md"
version = "0.0.1"
dependencies = [
  "requests==2.31.0"
]

[project.optional-dependencies]
dev = [
  "pytest==8.0.0",
  "pytest-asyncio==0.23.4",
]

docs = [
"Sphinx==7.2.6",
"sphinx-autobuild==2021.3.14",
"myst-parser==2.0.0",
"pydata-sphinx-theme==0.15.2"
]